# ralph-cli

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PUBLISHING.md  README.md  TESTING.txt  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  publish.yml  security.yml  update-homebrew.yml
plans/: PROGRESS.txt  SPEC.md  TASKS.json
scripts/: setup-branch-protection.sh
skills/: REVIEWER_TEMPLATE.md
skills/ralph-iteration/: SKILL.md
skills/ralph-prd/: SKILL.md
skills/ralph-tasks/: SKILL.md
skills/repo-structure-reviewer/: SKILL.md
skills/reviewers/code-simplifier/: SKILL.md
skills/reviewers/github-actions/: SKILL.md
skills/reviewers/language/python/: SKILL.md
skills/reviewers/release/: SKILL.md
skills/reviewers/test-quality/: SKILL.md
skills/test-quality-reviewer/: SKILL.md
src/ralph/: __init__.py  cli.py
src/ralph/commands/: __init__.py  init_cmd.py  loop.py  once.py  prd.py  review.py  sync.py  tasks.py
src/ralph/models/: __init__.py  config.py  finding.py  manifest.py  review_state.py  reviewer.py  tasks.py
src/ralph/services/: __init__.py  claude.py  fix_loop.py  git.py  language.py  review_loop.py  reviewer_config_writer.py  reviewer_detector.py  scaffold.py  skill_loader.py  skills.py
src/ralph/skills/: REVIEWER_TEMPLATE.md  SKILL_TEMPLATE.md  __init__.py
src/ralph/skills/ralph/: __init__.py
src/ralph/skills/ralph/iteration/: __init__.py
src/ralph/skills/ralph/prd/: SKILL.md  __init__.py
src/ralph/skills/ralph/tasks/: __init__.py
src/ralph/skills/reviewers/: __init__.py
src/ralph/skills/reviewers/code_simplifier/: SKILL.md  __init__.py
src/ralph/skills/reviewers/github_actions/: SKILL.md  __init__.py
src/ralph/skills/reviewers/language/: __init__.py
src/ralph/skills/reviewers/language/bicep/: SKILL.md  __init__.py
src/ralph/skills/reviewers/language/python/: SKILL.md  __init__.py
src/ralph/skills/reviewers/release/: SKILL.md  __init__.py
src/ralph/skills/reviewers/repo_structure/: SKILL.md  __init__.py
src/ralph/skills/reviewers/test_quality/: SKILL.md  __init__.py
src/ralph/utils/: __init__.py  console.py  files.py  prompt.py
tests/: __init__.py  conftest.py  test_already_implemented.py  test_bug_fixes.py  test_cli.py  test_commands_integration.py  test_finding_model.py  test_fix_loop.py  test_init.py  test_language_detection.py  test_manifest.py  test_models.py  test_nofix_and_resume.py  test_quality_checks.py  test_review_command.py  test_review_force.py  test_review_loop.py  test_review_state.py  test_reviewer_config.py  test_reviewer_config_writer.py  test_reviewer_detector.py  test_scaffold.py  test_skill_loader.py  test_skills_service.py  test_tasks_codebase_context.py  test_tasks_model.py
tests/test_commands/: __init__.py  test_init_cmd.py  test_loop.py  test_once.py  test_prd.py  test_sync.py  test_tasks.py
tests/test_integration/: __init__.py  test_autonomous_iteration.py  test_command_integration.py  test_prd_automation.py
tests/test_services/: __init__.py  test_claude.py  test_git.py  test_scaffold.py  test_skill_loader.py  test_skills.py
tests/test_utils/: __init__.py  test_conftest_utils.py  test_console.py  test_files.py
