[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ralph-cli"
version = "0.1.0"
description = "A Python CLI tool that implements the Ralph autonomous iteration pattern for Claude Code"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Jack", email = "jack@example.com" }
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
ralph = "ralph.cli:app"

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pyright>=1.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ralph"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
include = ["src"]
exclude = ["tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
