[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ralph-cli"
version = "2.2.0"
description = "A Python CLI tool that implements the Ralph autonomous iteration pattern for Claude Code"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Jack", email = "jack@example.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/jackemcpherson/ralph-cli"
Repository = "https://github.com/jackemcpherson/ralph-cli"
Changelog = "https://github.com/jackemcpherson/ralph-cli/blob/main/CHANGELOG.md"
"Issue Tracker" = "https://github.com/jackemcpherson/ralph-cli/issues"

[project.scripts]
ralph = "ralph.cli:app"

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pyright>=1.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ralph"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["D", "E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
include = ["src"]
exclude = ["tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
